# ogui

./: CMakeLists.txt  LICENSE  README.md
data/: table.xml
include/: glew.h  glut.h  input_callback.h  prims.h  xml.h  xstring.h  zstreams.h
include/ogui/: button.h  constants.h  fill.h  font.h  frame.h  generator.h  image.h  image_cache.h  layout.h  manager.h  mapping.inl  mapping.py  math2d.h  modal.h  ogui.h  parse.h  rgba_image.h  scroll_area.h  scrollbar.h  skin_colors.inl  static_widget.h  table.h  text.h  transparent.h  utilities.h  widget.h
lib/: freeglut_static.lib  freeglut_static_d.lib  glew32s.lib  glew32s_d.lib
samples/balance/: CMakeLists.txt  CoordsWidget.h  main.cpp  scene.cpp  scene.h  textrb.h
samples/opengl/: CMakeLists.txt  main.cpp
samples/sdl/: CMakeLists.txt  main.cpp
samples/windows/: CMakeLists.txt  Resource.h  stdafx.cpp  stdafx.h  wmain.cpp  wmain.rc
src/demo/: CMakeLists.txt  buttons.cpp  imagemap.cpp  mainmenu.cpp  table.cpp
src/image/: CMakeLists.txt  rgba_image.cpp  zstreams.cpp
src/ogui/: CMakeLists.txt  button.cpp  def_font.h  fill.cpp  font.cpp  generator.cpp  layout.cpp  ogui.cpp  stdafx.cpp  stdafx.h  text.cpp  utilities.cpp
